<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="emptyText"></string>
    <string name="app_name">Pay My Parking</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="license_plate">License plate</string>
    <string name="license_plates">License plates</string>
    <string name="parking_zones">Parking zones</string>
    <string name="settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_city">Select city</string>
    <string name="confirm_delete_title">Delete?</string>
    <string name="confirm_delete_description">Do you want to delete \"%s\" license plate?</string>
    <string name="confirm_delete_positive_caption">Delete</string>
    <string name="confirm_delete_negative_caption">Cancel</string>
    <string name="confirm_parking_payment">Confirm parking payment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_execom_logo_dsc">Execom logo</string>
    <string name="about_title">Pay My Parking 1.0.0</string>
    <string name="about_description">Easy to use, one click application for parking payment in Serbia.</string>
    <string name="about_site">http://www.execom.eu</string>
    <string name="about_copyright">Copyright &#169; 2014 Pay My Parking</string>
    <string name="about_support">brus@execom.eu</string>
    
    <string name="confirm_pay_parking_title">Pay parking</string>
    <string name="confirm_pay_parking_description">Do you want to pay the parking in the parking zone \"%s\"?</string>
    <string name="confirm_pay_parking_positive_caption">Pay parking</string>
    <string name="confirm_pay_parking_negative_caption">Cancel</string>
    
    <string name="result_dialog_title">Pay parking info</string>
    <string name="result_dialog_positive_description">Parking was successfully paid.</string>
    <string name="result_dialog_negative_description">Error occurred while trying to pay the parking. Please try again.</string>
    <string name="ok_button_caption">OK</string>
    
    <string name="no_license_plate_title">Invalid license plate</string>
    <string name="no_license_plate_description">Please enter the License Plate in Settings menu before paying the parking.</string>

</resources>
