<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/tvLicensePlates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license_plates"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/lsvLicensePlates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="10sp">

        <EditText
            android:id="@+id/newLicensePlate"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/addLicensePlate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_lp_selector"
            android:contentDescription="@string/emptyText"
            android:onClick="addLicensePlateOnClickHandler"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvSelectCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_city"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Spinner
        android:id="@+id/spnSelectCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>